<resources>
    <string name="app_name" translatable="false">Template</string>

    <string name="facebook_app_id" translatable="false">478207525978138</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb478207525978138</string>

    <string name="error_title">ขออภัย</string>
    <string name="error_idle_time_out_title">คุณไม่ได้ทำรายการในเวลาที่กำหนด</string>
    <string name="error_idle_time_out">คุณไม่ได้ทำรายการในเวลาที่กำหนด กรุณาเข้าสู่ระบบใหม่อีกครั้ง</string>
    <string name="error_idle_time_out_btn">เข้าสู่ระบบใหม่</string>

    <!--Log In-->
    <string name="login_title">ลงชื่อเข้าใช้งาน</string>
    <string name="login_btn">เข้าสู่ระบบ</string>
    <string name="login_or">OR</string>
    <string name="login_signup">ยังไม่มีชื่อผู้ใช้งาน ลงทะเบียน</string>
    <string name="login_username_hint">ชื่อผู้ใช้งาน</string>
    <string name="login_password_hint">รหัสผ่าน</string>
    <string name="login_forgot_password">ลืมรหัสผ่าน</string>
    <string name="login_no_user">ยังไม่มีชื่อผู้ใช้งาน</string>
    <string name="login_register">ลงทะเบียนขอสิทธิ์เข้าใช้งาน</string>

    <string name="set_pin_title">ตั้งรหัส PIN</string>
    <string name="verify_pin_title">ยืนยันรหัส PIN</string>

    <string name="login_pin_max_attempt">ท่านกรอกรหัส PIN ไม่ถูกต้องเกินจำนวนครั้งที่กำหนด กลับสู่ขั้นตอน ลืมรหัส PIN</string>
    <string name="login_pin_to_forgot_pin">กลับสู่ขั้นตอน ลืมรหัส PIN</string>

    <string name="suspend_account_title">กรอกรหัสผ่าน ไม่ถูกต้องเกินจำนวนครั้งที่กำหนด</string>
    <string name="suspend_account_desc">กลับสู่ขั้นตอน ลืมรหัสผ่าน</string>
    <string name="suspend_account_btn">ลืมรหัสผ่าน</string>

    <string name="register">ลงทะเบียนเข้าใช้งาน</string>

    <string name="forgot_password">ลืมรหัสผ่าน</string>
    <string name="forgot_password_title">ลืมรหัสผ่าน</string>
    <string name="forgot_password_sub_title">กรอกชื่อผู้ใช้งานเพื่อทำการตั้งรหัสผ่านใหม่</string>

    <string name="forgot_pin">ลืมรหัส PIN</string>
    <string name="forgot_pin_title">ลืมรหัส PIN</string>
    <string name="forgot_pin_sub_title">กรุณายืนยันบัญชีผู้ใช้ของคุณ </string>
    <string name="forgot_pin_confirm_title">ยืนยันเข้าสู่ขั้นตอนการลืมรหัสผ่าน</string>
    <string name="forgot_pin_confirm_desc">เมื่อยืนยัน ระบบจะทำการรีเซ็ตรหัสผ่าน และรหัส PIN ที่ใช้ในระบบ</string>

    <string name="password_title">ตั้งรหัสผ่าน</string>
    <string name="password_sub_title">สำหรับเข้าใช้งานระบบ</string>

    <string name="fingerprint_not_recognized">Fingerprint not recognized. Try again.</string>
    <string name="touch_sensor">Touch sensor.</string>
    <string name="fingerprint_recognized">Fingerprint recognized.</string>

    <!--Sign Up-->
    <string name="signup_button">ลงทะเบียน</string>
    <string name="signup_title">ลงทะเบียน</string>
    <string name="signup_username_hint">ชื่อผู้ใช้งาน</string>
    <string name="signup_password_hint">รหัสผ่าน</string>
    <string name="signup_email_hint">Email</string>
    <string name="signup_name_hint">Name</string>
    <string name="signup_surname_hint">Surname</string>
    <string name="signup_phone_hint">Phone</string>

    <!--Drawer Menus-->
    <string name="main_menu_about">About</string>
    <string name="main_menu_home">Home</string>
    <string name="main_menu_notification">Notification</string>
    <string name="main_menu_product">Product</string>
    <string name="main_menu_scan">Scan</string>
    <string name="main_menu_logout">Logout</string>
    <string name="main_menu_setting">Setting</string>
    <string name="main_menu_member">Member</string>
    <string name="main_menu_feed">My Feed</string>
    <string name="main_menu_map">Map</string>
    <string name="main_shopping_cart">Shopping Cart</string>
    <string name="main_menu_profile">Profile</string>
    <string name="main_menu_movie">Now Playing</string>

    <string name="product_price">PRICE: %s</string>

    <string name="profile_desc">Rowan Sebastian Atkinson CBE is an English actor,  comedian and screenwriter</string>
    <string name="profile_title">Mr Bean</string>

    <!--Movie-->
    <string name="movie_generic_error">Oops! Something went wrong,\nPlease try again later…</string>
    <string name="movie_book_the_movie">Book the Movie</string>
    <string name="movie_genres_header">Genres</string>
    <string name="movie_overview_header">Overview</string>
    <string name="movie_duration_header">Duration</string>
    <string name="movie_language_header">Language</string>

    <string name="edit_user_info">แก้ไขข้อมูลส่วนตัว</string>
    <string name="edit_user_info_title">ข้อมูลส่วนตัว</string>
    <string name="edit_user_info_subtitle">กรุณากรอกข้อมูลให้เป็นปัจจุบัน</string>

    <string name="user_info">ข้อมูลส่วนตัว</string>
    <string name="user_first_name">ชื่อ</string>
    <string name="user_last_name">นามสกุล</string>
    <string name="user_full_name">ชื่อ-นามสกุล</string>
    <string name="user_citizen_id">เลขประจำตัวประชาชน</string>
    <string name="user_birthday">วัน เดือน ปีเกิด</string>
    <string name="user_age">อายุ</string>
    <string name="user_status">สถานะ</string>

    <string name="contact_info">ข้อมูลการติดต่อ</string>
    <string name="contact_phone">เบอร์โทรศัพท์บ้าน</string>
    <string name="contact_mobile_phone">เบอร์โทรศัพท์มือถือ</string>
    <string name="contact_email">อีเมล</string>
    <string name="edit_contact_info_email_warning">* กรุณากรอกอีเมลเพื่อใช้เป็นช่องทางในการติดต่อ</string>

    <string name="cancel">ยกเลิก</string>
    <string name="close">ปิด</string>
    <string name="agree">ตกลง</string>
    <string name="confirm">ยืนยัน</string>
    <string name="save">บันทึก</string>
    <string name="next">ถัดไป</string>
    <string name="accept">ยอมรับ</string>
    <string name="not_accept">ไม่ยอมรับ</string>
    <string name="please_select">กรุณาเลือก</string>
    <string name="loading_text">กำลังดำเนินการ…</string>

    <string name="error_empty">กรุณาระบุข้อมูล</string>

    <string name="address">ที่อยู่</string>
    <string name="address_no">เลขที่อยู่</string>
    <string name="address_building">อาคาร</string>
    <string name="address_floor">ชั้นที่</string>
    <string name="address_room">ห้องที่</string>
    <string name="address_village">หมู่บ้าน</string>
    <string name="address_moo">หมู่ที่</string>
    <string name="address_alley">ตรอก</string>
    <string name="address_soi">ซอย</string>
    <string name="address_road">ถนน</string>
    <string name="address_sub_district">ตำบล/แขวง</string>
    <string name="address_district">อำเภอ/เขต</string>
    <string name="address_province">จังหวัด</string>
    <string name="address_postcode">รหัสไปรษณีย์</string>

    <string name="pin_code_forgot_pin">ลืมรหัส PIN</string>
    <string name="pin_code_clear">ออกจากระบบ</string>
    <string name="pin_code_fingerprint_text">Fingerprint</string>
    <string name="pin_code_fingerprint_success">Fingerprint recognized</string>
    <string name="pin_code_fingerprint_not_recognized">Fingerprint not recognized. Try again</string>

    <string name="otp_code_title">ใส่รหัส OTP</string>
    <string name="otp_code_channel_label">ระบบได้ส่งรหัส OTP ไปยัง %s</string>
    <string name="otp_code_reference_label">เลขอ้างอิง :</string>
    <string name="otp_code_expire_label">OTP หมดอายุภายใน :</string>
    <string name="otp_code_expire">%s นาที</string>
    <string name="otp_code_request_otp">ขอรหัส OTP ใหม่</string>
    <string name="otp_code_error_msg_invalid_pin">รหัส OTP ไม่ถูกต้อง ใส่ได้อีก 2 ครั้ง</string>
    <string name="otp_code_error_timeout_title">รหัส OTP หมดอายุ</string>
    <string name="otp_code_error_timeout_sub_title">กรุณากดขอ OTP ใหม่</string>
    <string name="otp_code_error_request_exceed_title">ขอรหัส OTP ใหม่\nเกินจำนวนครั้งที่กำหนด</string>
    <string name="otp_code_error_invalid_exceed_title">รหัส OTP ผิดเกินจำนวนครั้ง</string>
    <string name="otp_code_error_invalid_exceed_sub_title">กรุณากดขอ OTP ใหม่</string>

    <string name="otp_channel_title">ช่องทางการรับรหัส OTP</string>
    <string name="otp_channel_sub_title">กรุณาเลือกช่องทาง</string>
    <string name="otp_channel_btn">รับรหัส OTP</string>

    <string name="change_password">เปลี่ยนรหัสผ่าน</string>
    <string name="change_password_title">เปลี่ยนรหัสผ่านใหม่</string>
    <string name="change_password_sub_title">ควรใช้รหัสผ่านที่รัดกุมซึ่งไม่ซ้ำกับรหัสผ่านที่คุณใช้กับที่อื่นๆ</string>
    <string name="change_password_current_password_label">รหัสผ่านปัจจุบัน</string>
    <string name="change_password_new_password_label">รหัสผ่านใหม่</string>
    <string name="change_password_remark">รหัสผ่านต้องมีจำนวน 8 ตัวขึ้นไป โดยอย่างน้อยประกอบด้วย ตัวเลข และตัวอักษรภาษาอังกฤษ</string>
    <string name="change_password_password_score_simple">ความปลอดภัยต่ำ</string>
    <string name="change_password_password_score_middle">ความปลอดภัยปานกลาง</string>
    <string name="change_password_password_score_hard">ความปลอดภัยสูง</string>
    <string name="change_password_confirm_new_password_label">ยืนยันรหัสผ่านใหม่</string>
    <string name="change_password_confirm_password_error">ยืนยันรหัสผ่านไม่ตรงกัน</string>
    <string name="change_password_complete">เปลี่ยนรหัสผ่านใหม่สำเร็จ</string>
    <string name="change_password_btn">เปลี่ยนรหัสผ่าน</string>

    <string name="pin_confirm_title">ยืนยัน PIN</string>

    <string name="pin_form_title">ใส่รหัส PIN</string>
    <string name="pin_create">ตั้งรหัส PIN</string>
    <string name="pin_confirm">ยืนยันรหัส PIN</string>
    <string name="pin_description">ตั้งรหัส PIN 6 หลัก สำหรับใช้ยืนยันการทำรายการ ไม่ควรใช้เป็นตัวเลขที่คาดเดาได้ง่าย อย่างเช่น ตัวเลขเรียงกันหรือเลขซ้ำกัน</string>
    <string name="pin_confirm_invalid">ยืนยันรหัส PIN ไม่ตรงกัน</string>
    <string name="pin_invalid">ใส่รหัส PIN ไม่ถูกต้อง</string>

    <string name="setting_menu_user_info">ข้อมูลบัญชี</string>
    <string name="setting_menu_edit_user_info">แก้ไขข้อมูลส่วนตัว</string>
    <string name="setting_menu_change_password">เปลี่ยนรหัสผ่าน</string>
    <string name="setting_menu_change_pin">เปลี่ยนรหัส PIN</string>
    <string name="setting_menu_logout">ออกจากระบบ</string>
    <string name="setting_menu_term_and_condition">ข้อตกลงและเงื่อนไข</string>
    <string name="setting_menu_version">เวอร์ชั่นแอปพลิเคชัน</string>
    <string name="setting_menu_contact">ติดต่อเรา</string>

    <string name="setting_logout_confirm_msg">ต้องการออกจากระบบหรือไม่</string>

    <string name="user_title">ข้อมูลบัญชี</string>

    <string name="user_detail_title">รายละเอียดบัญชี</string>

    <string name="back_again_exit">กดอีกครั้ง เพื่อออกจากแอป</string>

    <plurals name="duration">
        <item quantity="one">%d minute</item>
        <item quantity="other">%1$d minutes</item>
    </plurals>

</resources>
