<?xml version="1.0" encoding="utf-8"?>

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_home"
    app:startDestination="@id/home_dest">

    <include app:graph="@navigation/navigation_set_pin" />

    <action
        android:id="@+id/action_to_login"
        app:destination="@id/login_pin_dest"
        app:launchSingleTop="true"
        app:popUpTo="@id/navigation_home"
        app:popUpToInclusive="true" />

    <action
        android:id="@+id/action_to_verify_pin"
        app:destination="@id/verify_pin_dest" />

    <action
        android:id="@+id/action_to_set_pin"
        app:destination="@id/navigation_set_pin" />

    <fragment
        android:id="@+id/home_dest"
        android:name="com.devper.template.presentation.home.HomeFragment"
        android:label="@string/main_menu_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/home_to_verify_pin"
            app:destination="@id/verify_pin_dest" />
    </fragment>

    <fragment
        android:id="@+id/notification_dest"
        android:name="com.devper.template.presentation.notification.NotificationFragment"
        android:label="@string/main_menu_notification"
        tools:layout="@layout/fragment_notification" />

    <fragment
        android:id="@+id/setting_dest"
        android:name="com.devper.template.presentation.setting.SettingFragment"
        android:label="@string/main_menu_setting"
        tools:layout="@layout/fragment_setting">

        <action
            android:id="@+id/setting_to_change_password"
            app:destination="@id/change_password_dest" />

        <action
            android:id="@+id/setting_to_change_pin"
            app:destination="@id/change_pin_dest" />

        <action
            android:id="@+id/setting_to_user"
            app:destination="@id/user_dest" />

        <action
            android:id="@+id/setting_to_user_form"
            app:destination="@id/user_form_dest" />

        <action
            android:id="@+id/setting_to_term_condition"
            app:destination="@id/term_condition_dest" />

    </fragment>

    <fragment
        android:id="@+id/user_dest"
        android:name="com.devper.template.presentation.user.UserFragment"
        android:label="@string/user_title"
        tools:layout="@layout/fragment_user">
        <action
            android:id="@+id/user_to_user_detail"
            app:destination="@id/user_detail_dest" />
    </fragment>

    <fragment
        android:id="@+id/user_form_dest"
        android:name="com.devper.template.presentation.userupdate.UserFormFragment"
        android:label="@string/setting_menu_edit_user_info"
        tools:layout="@layout/fragment_user_form" />

    <fragment
        android:id="@+id/user_detail_dest"
        android:name="com.devper.template.presentation.userdetail.UserDetailFragment"
        android:label="@string/user_detail_title"
        tools:layout="@layout/fragment_user_detail">
        <action
            android:id="@+id/user_to_user_update"
            app:destination="@id/user_update_dest" />
    </fragment>

    <fragment
        android:id="@+id/user_update_dest"
        android:name="com.devper.template.presentation.userupdate.UserUpdateFragment"
        android:label="@string/setting_menu_edit_user_info"
        tools:layout="@layout/fragment_user_form" />

    <fragment
        android:id="@+id/change_password_dest"
        android:name="com.devper.template.presentation.passwordchange.PasswordChangeFragment"
        android:label="@string/change_password"
        tools:layout="@layout/fragment_password_change">

    </fragment>

    <fragment
        android:id="@+id/change_pin_dest"
        android:name="com.devper.template.presentation.pinchange.PinVerifyFragment"
        android:label="@string/setting_menu_change_pin"
        tools:layout="@layout/fragment_pin_form">

        <action
            android:id="@+id/change_pin_to_pin_form"
            app:destination="@id/pin_form_dest"
            app:launchSingleTop="true"
            app:popUpTo="@id/change_pin_dest"
            app:popUpToInclusive="true" />

    </fragment>

    <fragment
        android:id="@+id/verify_pin_dest"
        android:name="com.devper.template.presentation.pinchange.PinVerifyFragment"
        android:label="@string/verify_pin_title"
        tools:layout="@layout/fragment_pin_form">
    </fragment>

    <fragment
        android:id="@+id/pin_form_dest"
        android:name="com.devper.template.presentation.pin.PinFormFragment"
        android:label="@string/setting_menu_change_pin"
        tools:layout="@layout/fragment_pin_form" />

    <fragment
        android:id="@+id/profile_dest"
        android:name="com.devper.template.presentation.profile.ProfileFragment"
        android:label="@string/main_menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/term_condition_dest"
        android:name="com.devper.template.presentation.term.TermConditionFragment"
        android:label="@string/setting_menu_term_and_condition"
        tools:layout="@layout/fragment_term_condition" />

</navigation>
