<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.devper.template.presentation.pin.viewmodel.PinForgotViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <TextView
                    android:id="@+id/tvTitle"
                    style="@style/Text.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/forgot_pin_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvSubTitle"
                    style="@style/Text.Sub"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/forgot_pin_sub_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

                <androidx.cardview.widget.CardView
                    style="@style/Card.Top"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintTop_toBottomOf="@id/tvSubTitle">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/ly_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="16dp">

                        <TextView
                            android:id="@+id/tvCurrentUser"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/login_username_hint"
                            android:textColor="@color/black"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/etCurrentUser"
                            style="@style/Input"
                            android:layout_width="match_parent"
                            android:layout_height="44dp"
                            android:layout_marginTop="8dp"
                            android:enabled="false"
                            android:text="@{viewModel.username}"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/tvCurrentUser" />

                        <TextView
                            android:id="@+id/tvNewPasswordLabel"
                            style="@style/Text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/login_password_hint"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/etCurrentUser" />

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/etNewPassword"
                            style="@style/Input"
                            android:layout_width="match_parent"
                            android:layout_height="44dp"
                            android:layout_marginTop="8dp"
                            android:inputType="textPassword"
                            android:maxLength="20"
                            android:text="@={viewModel.password}"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/tvNewPasswordLabel" />

                        <TextView
                            android:id="@+id/tv_forgot_password"
                            style="@style/Text.Link"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:maxLines="1"
                            android:onClick="@{()-> viewModel.nextToForgotPassword()}"
                            android:text="@string/login_forgot_password"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/etNewPassword"
                            app:underline="@{true}" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_set_password"
                    style="@style/Button.Primary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_marginTop="@dimen/dimen_40dp"
                    android:onClick="@{()->viewModel.login()}"
                    android:text="@string/next"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="MissingConstraints"
                    tools:targetApi="lollipop" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>